--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "pug": "^3.0.2"
   },
   "main": "app.js",
-  "author": "",
+  "author": "Supriya",
   "license": "ISC",
   "description": ""
 }
